@@ -37,6 +37,7 @@ issue2, boolean, 0
 joy_prompt, boolean, 0,, joystick-prompt
 joy_kempston, boolean, 0,, kempston
 kempston_mouse, boolean, 0
+mouse_swap_buttons, boolean, 0
 tape_traps, boolean, 1,, traps, tapetraps
 fastload, boolean, 1
 auto_load, boolean, 1
